syntax = "proto3";
package frogchain.investibc;

option go_package = "frogchain/x/investibc/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message DepositBalance {
  string index = 1; 
  cosmos.base.v1beta1.Coin balance = 2 [(gogoproto.nullable) = false]; 
  
}

